; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ecx_meth.c_ecd_item_sign448.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ecx_meth.c_ecd_item_sign448.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NID_ED448 = common dso_local global i32 0, align 4
@V_ASN1_UNDEF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*, i32*, i32*, i32*)* @ecd_item_sign448 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecd_item_sign448(i32* %0, i32* %1, i8* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i32*, i32** %10, align 8
  %14 = load i32, i32* @NID_ED448, align 4
  %15 = call i32 @OBJ_nid2obj(i32 %14)
  %16 = load i32, i32* @V_ASN1_UNDEF, align 4
  %17 = call i32 @X509_ALGOR_set0(i32* %13, i32 %15, i32 %16, i32* null)
  %18 = load i32*, i32** %11, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %26

20:                                               ; preds = %6
  %21 = load i32*, i32** %11, align 8
  %22 = load i32, i32* @NID_ED448, align 4
  %23 = call i32 @OBJ_nid2obj(i32 %22)
  %24 = load i32, i32* @V_ASN1_UNDEF, align 4
  %25 = call i32 @X509_ALGOR_set0(i32* %21, i32 %23, i32 %24, i32* null)
  br label %26

26:                                               ; preds = %20, %6
  ret i32 3
}

declare dso_local i32 @X509_ALGOR_set0(i32*, i32, i32, i32*) #1

declare dso_local i32 @OBJ_nid2obj(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
